// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Server can query Authors 1`] = `
Object {
  "authors": null,
}
`;

exports[`Server can query Posts 1`] = `
Object {
  "posts": null,
}
`;

exports[`Server can resolve arbitrarily nested queries 1`] = `
Object {
  "authors": null,
}
`;
